Updates to hmtk notebook

--- a/hmtk/GEM HMTK - From Data to Hazard.ipynb
+++ b/hmtk/GEM HMTK - From Data to Hazard.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b1288c3614c1fd1e8a6ba39780424b7539ed5d18bb674ddd54a398e00001bd2c"
+  "signature": "sha256:efd131a0f37554ed38d2f02a86e545b6cf1b96e9817569259e8cfb1591ba356e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,16 +56,58 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%matplotlib inline\n",
+      "import numpy as np\n",
+      "import matplotlib.pyplot as plt\n",
+      "from copy import deepcopy\n",
+      "from mpl_toolkits.basemap import Basemap\n",
+      "from hmtk.seismicity.declusterer.dec_gardner_knopoff import GardnerKnopoffType1 \n",
+      "from hmtk.seismicity.declusterer.distance_time_windows import UhrhammerWindow \n",
+      "from hmtk.seismicity.occurrence.weichert import Weichert\n",
+      "from hmtk.seismicity.max_magnitude.cumulative_moment_release import CumulativeMoment\n",
+      "\n",
+      "from hmtk.parsers.catalogue import CsvCatalogueParser\n",
+      "from hmtk.parsers.source_model.nrml04_parser import nrmlSourceModelParser\n",
+      "\n",
+      "from hmtk.plotting.mapping import HMTKBaseMap\n",
+      "\n",
+      "from hmtk.seismicity.selector import CatalogueSelector\n",
+      "\n",
+      "from hmtk.plotting.seismicity.catalogue_plots import (plot_depth_histogram,\n",
+      "                                                      plot_observed_recurrence,\n",
+      "                                                      plot_magnitude_time_density)\n",
+      "\n",
+      "from openquake.hazardlib.geo.nodalplane import NodalPlane\n",
+      "from openquake.hazardlib.pmf import PMF\n",
+      "\n",
+      "from hmtk.seismicity.occurrence.weichert import Weichert\n",
+      "from hmtk.seismicity.occurrence.b_maximum_likelihood import BMaxLikelihood\n",
+      "\n",
+      "from hmtk.sources.source_model import mtkSourceModel\n",
+      "from openquake.hazardlib.mfd.truncated_gr import TruncatedGRMFD\n",
+      "from openquake.hazardlib.tom import PoissonTOM\n",
+      "\n",
+      "from hmtk.hazard import HMTKHazardCurve, site_array_to_collection\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "def get_map_projection(src):\n",
       "    \"\"\"\n",
       "    Return map projection specific to source.\n",
       "    \"\"\"\n",
       "    # extract rupture enclosing polygon (considering a buffer of 10 km)\n",
       "    rup_poly = src.get_rupture_enclosing_polygon(10.)\n",
-      "    min_lon = numpy.min(rup_poly.lons)\n",
-      "    max_lon = numpy.max(rup_poly.lons)\n",
-      "    min_lat = numpy.min(rup_poly.lats)\n",
-      "    max_lat = numpy.max(rup_poly.lats)\n",
+      "    min_lon = np.min(rup_poly.lons)\n",
+      "    max_lon = np.max(rup_poly.lons)\n",
+      "    min_lat = np.min(rup_poly.lats)\n",
+      "    max_lat = np.max(rup_poly.lats)\n",
       "    \n",
       "    # create map projection\n",
       "    m = Basemap(projection='merc', llcrnrlat=min_lat, urcrnrlat=max_lat,\n",
@@ -97,9 +139,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.parsers.catalogue import CsvCatalogueParser\n",
-      "from hmtk.parsers.source_model.nrml04_parser import nrmlSourceModelParser\n",
-      "\n",
       "#Importing catalogue\n",
       "catalogue_filename = 'input_data/catalogues/catalogue_example.csv'\n",
       "parser = CsvCatalogueParser(catalogue_filename) \n",
@@ -108,7 +147,7 @@
       "# Reading area source\n",
       "source_model_file1 = 'input_data/source_models/area_source_minimal.xml'\n",
       "parser = nrmlSourceModelParser(source_model_file1)\n",
-      "source_model = parser.read_file()"
+      "source_model = parser.read_file(\"Source Model 1\")"
      ],
      "language": "python",
      "metadata": {},
@@ -126,8 +165,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.plotting.mapping import HMTKBaseMap\n",
-      "\n",
       "map_config = {'min_lon': -82., 'max_lon': -65., 'min_lat': -5, 'max_lat': 12., 'resolution':'l'}\n",
       "basemap1 = HMTKBaseMap(map_config, 'Catalogue and sources')\n",
       "basemap1.add_catalogue(catalogue, overlay=True)\n",
@@ -149,13 +186,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from copy import deepcopy\n",
-      "\n",
-      "from hmtk.seismicity.declusterer.dec_gardner_knopoff import GardnerKnopoffType1 \n",
-      "from hmtk.seismicity.declusterer.distance_time_windows import UhrhammerWindow \n",
-      "from hmtk.seismicity.occurrence.weichert import Weichert\n",
-      "from hmtk.seismicity.max_magnitude.cumulative_moment_release import CumulativeMoment\n",
-      "\n",
       "# Declustering\n",
       "declustering_gk = GardnerKnopoffType1()\n",
       "declust_config_gk = {'time_distance_window': UhrhammerWindow(), 'fs_time_prop': 1.0}\n",
@@ -187,8 +217,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.seismicity.selector import CatalogueSelector\n",
-      "\n",
       "# Selecting subcatalogue\n",
       "area_source = source_model.sources[0]\n",
       "selector = CatalogueSelector(catalogue)\n",
@@ -225,9 +253,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.plotting.seismicity.catalogue_plots import (plot_depth_histogram,\n",
-      "                                                      plot_observed_recurrence,\n",
-      "                                                      plot_magnitude_time_density)\n",
       "magnitude_bin = 0.1\n",
       "time_bin = 1.0\n",
       "depth_bin = 20.0\n",
@@ -337,8 +362,7 @@
      "collapsed": false,
      "input": [
       "# Import the NodalPlane and the PMF objects from the hazardlib\n",
-      "from openquake.hazardlib.geo.nodalplane import NodalPlane\n",
-      "from openquake.hazardlib.pmf import PMF\n",
+      "\n",
       "\n",
       "# Define our two Nodal Planes\n",
       "nodal_plane1 = NodalPlane(strike = 45.0, dip = 90.0, rake = 0.0)\n",
@@ -372,9 +396,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.seismicity.occurrence.weichert import Weichert\n",
-      "from hmtk.seismicity.occurrence.b_maximum_likelihood import BMaxLikelihood\n",
-      "\n",
       "# Weichert Method\n",
       "recurrence1 = Weichert()\n",
       "weichert_config = {'magnitude_interval': 0.1, 'bvalue': 1., 'itstab': 1E-5, 'maxiter': 1000}\n",
@@ -435,9 +456,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.sources.source_model import mtkSourceModel\n",
-      "from openquake.hazardlib.mfd.truncated_gr import TruncatedGRMFD\n",
-      "\n",
       "# Set the minimum magnitude to 5.0\n",
       "minimum_mag = 5.0\n",
       "# Set the width of descretisation of the MFD to 0.2\n",
@@ -491,7 +509,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from openquake.hazardlib.tom import PoissonTOM\n",
       "tom = PoissonTOM(1.0)"
      ],
      "language": "python",
@@ -538,12 +555,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from hmtk.hazard import HMTKHazardCurve, site_array_to_collection\n",
-      "\n",
       "# Create our sites in a table (a 2-D array) with all of the site attributes\n",
-      "#                       ID, Longitude, Latitude,      Vs30,  Vs30Measured,     Z1.0, Z2.5\n",
-      "site_array = np.array([[1.0,    -76.6,     6.0,      800.0,      1.0,          40.0, 1.0],\n",
-      "                       [2.0,    -73.0,     0.5,      350.0,      1.0,          80.0, 1.5]])\n",
+      "#                       ID, Longitude, Latitude,      Vs30,  Vs30Measured,     Z1.0, Z2.5   Backarc - 1 = True, 0 = False\n",
+      "site_array = np.array([[1.0,    -76.6,     6.0,      800.0,      1.0,          40.0, 1.0,   0.0],\n",
+      "                       [2.0,    -73.0,     0.5,      350.0,      1.0,          80.0, 1.5,   0.0]])\n",
       "\n",
       "# Create our \"Site Collection\" for the calculation\n",
       "sites = site_array_to_collection(site_array)"
@@ -564,16 +579,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from mpl_toolkits.basemap import Basemap\n",
-      "\n",
       "# plot ruptures. Color proportional to magnitude\n",
-      "fig1 = pyplot.figure(figsize=(10, 10), dpi=160)\n",
+      "fig1 = plt.figure(figsize=(10, 10), dpi=160)\n",
       "\n",
       "# loop over ruptures, extract rupture surface boundary and magnitude\n",
       "min_lon, max_lon, min_lat, max_lat, m = get_map_projection(oq_source_model1[0])\n",
       "print min_lon, max_lon, min_lat, max_lat\n",
-      "m.drawparallels(numpy.arange(np.ceil(min_lat), np.ceil(max_lat), 1.0), labels=[True, False, False, True])\n",
-      "m.drawmeridians(numpy.arange(np.ceil(min_lon), np.ceil(max_lon), 1.0), labels=[True, False, False, True])\n",
+      "m.drawparallels(np.arange(np.ceil(min_lat), np.ceil(max_lat), 1.0), labels=[True, False, False, True])\n",
+      "m.drawmeridians(np.arange(np.ceil(min_lon), np.ceil(max_lon), 1.0), labels=[True, False, False, True])\n",
       "m.drawcoastlines()\n",
       "m.drawcountries()\n",
       "\n",
@@ -584,7 +597,7 @@
       "lon2, lat2 = m(site_array[1, 1], site_array[1, 2])\n",
       "m.plot(lon1, lat1, 'Db', label='Site 1', markersize=10.)\n",
       "m.plot(lon2, lat2, 'sr', label='Site 2', markersize=10.)\n",
-      "pyplot.legend()\n"
+      "plt.legend()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -674,15 +687,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fig = pyplot.figure(figsize=(9, 9))\n",
-      "pyplot.loglog(imls, curves1[\"PGA\"][0,:], '-b', linewidth=2, label='Weichert')\n",
-      "pyplot.loglog(imls, curves2[\"PGA\"][0,:], '-r', linewidth=2, label='Weighted MLE')\n",
-      "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1))\n",
+      "fig = plt.figure(figsize=(9, 9))\n",
+      "plt.loglog(imls, curves1[\"PGA\"][0,:], '-b', linewidth=2, label='Weichert')\n",
+      "plt.loglog(imls, curves2[\"PGA\"][0,:], '-r', linewidth=2, label='Weighted MLE')\n",
+      "plt.legend(loc=\"upper left\", bbox_to_anchor=(1,1))\n",
       "plt.xlim([5E-3, 2.0])\n",
       "plt.ylim([1E-7, 1])\n",
-      "pyplot.xlabel('PGA (g)', fontsize=20)\n",
-      "pyplot.ylabel('Annual Probability of exceedance', fontsize=20)\n",
-      "pyplot.title(\"Hazard Curves for Site 1\", fontsize=20)"
+      "plt.xlabel('PGA (g)', fontsize=20)\n",
+      "plt.ylabel('Annual Probability of exceedance', fontsize=20)\n",
+      "plt.title(\"Hazard Curves for Site 1\", fontsize=20)"
      ],
      "language": "python",
      "metadata": {},
@@ -700,16 +713,24 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fig = pyplot.figure(figsize=(9, 9))\n",
-      "pyplot.loglog(imls, curves1[\"PGA\"][1,:], '-b', linewidth=2, label='Weichert')\n",
-      "pyplot.loglog(imls, curves2[\"PGA\"][1,:], '-r', linewidth=2, label='Weighted MLE')\n",
-      "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1))\n",
+      "fig = plt.figure(figsize=(9, 9))\n",
+      "plt.loglog(imls, curves1[\"PGA\"][1,:], '-b', linewidth=2, label='Weichert')\n",
+      "plt.loglog(imls, curves2[\"PGA\"][1,:], '-r', linewidth=2, label='Weighted MLE')\n",
+      "plt.legend(loc=\"upper left\", bbox_to_anchor=(1,1))\n",
       "plt.xlim([5E-3, 2.0])\n",
       "plt.ylim([1E-7, 1])\n",
-      "pyplot.xlabel('PGA (g)', fontsize=20)\n",
-      "pyplot.ylabel('Annual Probability of exceedance', fontsize=20)\n",
-      "pyplot.title(\"Hazard Curves for Site 2\", fontsize=20)"
+      "plt.xlabel('PGA (g)', fontsize=20)\n",
+      "plt.ylabel('Annual Probability of exceedance', fontsize=20)\n",
+      "plt.title(\"Hazard Curves for Site 2\", fontsize=20)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
