--- a/hmtk/GEM Hazard Training- HMTK demo1.ipynb
+++ b/hmtk/GEM Hazard Training- HMTK demo1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c49b96e68a95a54cff754b64aa9ff6f9c222762cc1c529a4b9e746f92cabc3da"
+  "signature": "sha256:f70389900bcdfdd3ae84a00163eb2b0ab108ac5dcd326947eceb77982a886acc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,6 +72,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%matplotlib inline\n",
       "# Dependencies \n",
       "import os\n",
       "import numpy as np\n",
@@ -392,7 +393,7 @@
       "parser = nrmlSourceModelParser(source_model_file)\n",
       "\n",
       "# Parse the seismic sources and save them into a variable called \"source_model\"\n",
-      "source_model = parser.read_file()\n",
+      "source_model = parser.read_file(\"Source Model 1\")\n",
       "\n",
       "# Adding the seismic sources\n",
       "basemap1.add_source_model(source_model, area_border='r-', border_width=1.5, alpha=0.5) "
@@ -644,7 +645,7 @@
       "# Print info \n",
       "\n",
       "data = np.column_stack([catalogue.get_decimal_time(), catalogue.data['magnitude'], catalogue.data['longitude'], catalogue.data['latitude'], cluster_index_gk, cluster_flag_gk])\n",
-      "print '      Time    Magnitude    Long.    Lat.   Cluster No. Index'\n",
+      "print '      Time    Magnitude    Long.    Lat.   Cluster No. Index (-1 = foreshock, 0 = mainshock, 1 = afterschock)'\n",
       "for row in data:\n",
       "    print '%14.8f  %6.2f  %8.3f  %8.3f  %6.0f  %6.0f' %(row[0], row[1], row[2], row[3], row[4], row[5])"
      ],
@@ -761,7 +762,7 @@
      "collapsed": false,
      "input": [
       "# Set up the configuration parameterss\n",
-      "comp_config = {'magnitude_bin': 1.0, 'time_bin': 5.0, 'increment_lock': True}\n",
+      "comp_config = {'magnitude_bin': 1.0, 'time_bin': 5.0, 'increment_lock': False}\n",
       "\n",
       "# Calling the method\n",
       "completeness_algorithm = Stepp1971()\n",
