Updated to make use of new ContextMaker.

--- a/hazardlib/GMPEs.ipynb
+++ b/hazardlib/GMPEs.ipynb
@@ -73,6 +73,7 @@
     "from openquake.hazardlib.site import Site, SiteCollection\n",
     "from openquake.hazardlib.imt import PGA\n",
     "from openquake.hazardlib.const import StdDev\n",
+    "from openquake.hazardlib.gsim.base import ContextMaker\n",
     "\n",
     "import numpy\n",
     "\n",
@@ -197,16 +198,17 @@
     "# loop over ruptures. For each rupture extract magnitude and median value\n",
     "means = []\n",
     "mags = []\n",
+    "context_maker = ContextMaker(gmpes)\n",
     "for rupture in src.iter_ruptures():\n",
     "    mags.append(rupture.mag)\n",
     "\n",
     "    values = []\n",
     "    for gmpe in gmpes:\n",
     "\n",
-    "            sctx, rctx, dctx = gmpe.make_contexts(site_collection, rupture)\n",
-    "            [mean], [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
+    "        sctx, rctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
+    "        [mean], [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
     "\n",
-    "            values.append(numpy.exp(mean))\n",
+    "        values.append(numpy.exp(mean))\n",
     "\n",
     "    means.append(values)\n",
     "\n",
@@ -225,12 +227,12 @@
     "# plot magnitude scaling\n",
     "fig = pyplot.figure(figsize=(9,9))\n",
     "\n",
-    "for i, (values, gmpe) in enumerate(zip(means, gmpes)):\n",
-    "    pyplot.plot(mags, values, linewidth=2, label=gmpe.__class__.__name__, color=cm.jet(float(i) / len(gmpes)))\n",
+    "for mean, gmpe in zip(means, gmpes):\n",
+    "    pyplot.plot(mags, mean, linewidth=2, label=gmpe.__class__.__name__)\n",
     "\n",
     "pyplot.xlabel('Magnitude', fontsize=20)\n",
     "pyplot.ylabel('%s' % imt.__class__.__name__, fontsize=20)\n",
-    "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1))"
+    "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1));"
    ]
   },
   {
@@ -272,10 +274,10 @@
     "values = []\n",
     "for gmpe in gmpes:\n",
     "\n",
-    "        sctx, rctx, dctx = gmpe.make_contexts(site_collection, rupture)\n",
-    "        mean, [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
+    "    sctx, rctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
+    "    mean, [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
     "\n",
-    "        values.append(numpy.exp(mean))\n"
+    "    values.append(numpy.exp(mean))\n"
    ]
   },
   {
@@ -295,8 +297,17 @@
     "pyplot.xlabel('JB distance', fontsize=20)\n",
     "pyplot.ylabel('%s' % imt.__class__.__name__, fontsize=20)\n",
     "pyplot.title('Magnitude %s' % rupture.mag, fontsize=20)\n",
-    "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1))"
+    "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -315,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.2"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
