Add matplotlib inline to hmtk Geodesy notebook

--- a/hmtk/Geodesy.ipynb
+++ b/hmtk/Geodesy.ipynb
@@ -30,6 +30,7 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "from hmtk.parsers.strain.strain_csv_parser import ReadStrainCsv\n",
     "\n",
@@ -253,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.2"
   }
  },
  "nbformat": 4,
