Modifies Residuals and Trellis notebooks to demo pretty_print

--- a/gmpe-smtk/Residuals-Training.ipynb
+++ b/gmpe-smtk/Residuals-Training.ipynb
@@ -105,6 +105,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### If you need to export the residuals to a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "residuals_file = \"data/demo_residuals1.csv\"\n",
+    "resid1.pretty_print(residuals_file, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plot the Distribution of Residuals"
    ]
   },
@@ -435,7 +454,7 @@
    "outputs": [],
    "source": [
     "# Consider the AkkarEtAlRjb2014 GMPE with PGA, Sa (0.2), Sa(1.0)\n",
-    "gmpe_list = [\"AkkarEtAlRjb2014\"]\n",
+    "gmpe_list = [\"AkkarEtAlRjb2014\", \"BooreEtAl2014\"]\n",
     "imt_list = [\"PGA\", \"SA(0.2)\", \"SA(1.0)\"]\n",
     "# Get the residuals for the site\n",
     "ssa1 = res.SingleStationAnalysis(top_sites.keys(), gmpe_list, imt_list)\n",
@@ -499,8 +518,30 @@
    },
    "outputs": [],
    "source": [
+    "rspl.IntraEventResidualWithSite(ssa1, \"BooreEtAl2014\", \"PGA\", figure_size=(7,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Plots the Intra-event analysis for each site\n",
     "rspl.IntraEventResidualWithSite(ssa1, \"AkkarEtAlRjb2014\", \"SA(1.0)\", figure_size=(7,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rspl.IntraEventResidualWithSite(ssa1, \"BooreEtAl2014\", \"SA(1.0)\", figure_size=(7,7))"
    ]
   },
   {
