--- a/gmpe-smtk/Trellis_Plotting -Training.ipynb
+++ b/gmpe-smtk/Trellis_Plotting -Training.ipynb
@@ -131,8 +131,19 @@
    },
    "outputs": [],
    "source": [
-    "trpl.MagnitudeIMTTrellis(magnitudes, distances, gmpe_list, imts, params, figure_size=(7,5),\n",
-    "                         filename=\"images/magnitude_imt_trellis_simple.pdf\", filetype=\"pdf\")\n"
+    "mag_imt_trellis = trpl.MagnitudeIMTTrellis(magnitudes, distances, gmpe_list, imts, params, figure_size=(7,5),\n",
+    "                                           filename=\"images/magnitude_imt_trellis_simple.pdf\", filetype=\"pdf\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mag_imt_trellis.pretty_print(\"data/magnitude_imt_trellis1.csv\", sep=\",\")"
    ]
   },
   {
@@ -143,8 +154,21 @@
    },
    "outputs": [],
    "source": [
-    "trpl.MagnitudeSigmaIMTTrellis(magnitudes, distances, gmpe_list, imts, params, stddevs=\"Total\", figure_size=(7,5),\n",
-    "                              filename=\"images/magnitude_intra_sigma_imt_trellis_simple.pdf\", filetype=\"pdf\")"
+    "mag_imt_sigma_trellis = trpl.MagnitudeSigmaIMTTrellis(magnitudes, distances, gmpe_list, imts, params, \n",
+    "                                                      stddevs=\"Total\", figure_size=(7,5),\n",
+    "                                                      filename=\"images/magnitude_intra_sigma_imt_trellis_simple.pdf\",\n",
+    "                                                      filetype=\"pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mag_imt_sigma_trellis.pretty_print(\"data/magnitude_imt_sigma_trellis1.csv\", sep=\",\")"
    ]
   },
   {
@@ -178,8 +202,20 @@
    },
    "outputs": [],
    "source": [
-    "trpl.DistanceIMTTrellis(magnitudes, distances, gmpe_list, imts, params, distance_type=\"rjb\", plot_type=\"loglog\",\n",
-    "                        filename=\"images/magnitude_distance_imt_trellis_simple.pdf\", filetype=\"pdf\")"
+    "dist_imt_trellis = trpl.DistanceIMTTrellis(magnitudes, distances, gmpe_list, imts, params,\n",
+    "                                           distance_type=\"rjb\", plot_type=\"loglog\",\n",
+    "                                           filename=\"images/magnitude_distance_imt_trellis_simple.pdf\", filetype=\"pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dist_imt_trellis.pretty_print(\"data/distance_imt_trellis1.csv\", sep=\",\")"
    ]
   },
   {
@@ -190,8 +226,21 @@
    },
    "outputs": [],
    "source": [
-    "trpl.DistanceSigmaIMTTrellis(magnitudes, distances, gmpe_list, imts, params, distance_type=\"rjb\", plot_type=\"loglog\",\n",
-    "                             filename=\"images/distance_total_sigma_imt_trellis_simple.pdf\", filetype=\"pdf\")"
+    "dist_imt_sigma_trellis = trpl.DistanceSigmaIMTTrellis(magnitudes, distances, gmpe_list, imts, params,\n",
+    "                                                      distance_type=\"rjb\", plot_type=\"loglog\",\n",
+    "                                                      filename=\"images/distance_total_sigma_imt_trellis_simple.pdf\",\n",
+    "                                                      filetype=\"pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dist_imt_sigma_trellis.pretty_print(\"data/distance_imt_sigma_trellis1.csv\", sep=\",\")"
    ]
   },
   {
@@ -232,8 +281,22 @@
    },
    "outputs": [],
    "source": [
-    "trpl.MagnitudeDistanceSpectraTrellis(magnitudes, distances, gmpe_list, periods, params, plot_type=\"loglog\", figure_size=(10,8),\n",
-    "                                     filename=\"images/spectra_trellis_simple.pdf\", filetype=\"pdf\")"
+    "mag_dist_spectra_trellis = trpl.MagnitudeDistanceSpectraTrellis(magnitudes, distances, gmpe_list,\n",
+    "                                                                periods, params, plot_type=\"loglog\",\n",
+    "                                                                figure_size=(10,8),\n",
+    "                                                                filename=\"images/spectra_trellis_simple.pdf\",\n",
+    "                                                                filetype=\"pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mag_dist_spectra_trellis.pretty_print(\"data/mag_dist_spectra_trellis.csv\", sep=\",\")"
    ]
   },
   {
@@ -244,8 +307,22 @@
    },
    "outputs": [],
    "source": [
-    "trpl.MagnitudeDistanceSpectraSigmaTrellis(magnitudes, distances, gmpe_list, periods, params, plot_type=\"semilogy\", figure_size=(10,8),\n",
-    "                                          filename=\"images/spectra_total_sigma_trellis_simple.pdf\", filetype=\"pdf\")"
+    "mag_dist_spectra_sigma = trpl.MagnitudeDistanceSpectraSigmaTrellis(magnitudes, distances, gmpe_list,\n",
+    "                                                                   periods, params, plot_type=\"loglog\",\n",
+    "                                                                   figure_size=(10,8),\n",
+    "                                                                   filename=\"images/spectra_total_sigma_trellis_simple.pdf\",\n",
+    "                                                                   filetype=\"pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mag_dist_spectra_sigma.pretty_print(\"data/mag_dist_spectra_sigma.csv\", sep=\",\")"
    ]
   },
   {
@@ -398,7 +475,7 @@
     "                         strike=0.0,  # Strike of rupture\n",
     "                         hypocentre_location=hypo_loc   # Location of hypocentre within rupture plane\n",
     "                         )\n",
-    "_ = rupt2.get_target_sites_line(200.0, 1.0, vs30=800.0, line_azimuth=90)\n",
+    "_ = rupt2.get_target_sites_line(200.0, 2.0, vs30=800.0, line_azimuth=90, as_log=False)\n",
     "rupt2.plot_model_configuration(filename=\"images/rupt_config_line.pdf\", filetype=\"pdf\")"
    ]
   },
@@ -545,7 +622,8 @@
    },
    "outputs": [],
    "source": [
-    "trpl.DistanceIMTTrellis.from_rupture_model(rupt2, gmpe_list, imts, filename=\"images/distance_footwall_trellis_rupt.pdf\", filetype=\"pdf\")"
+    "trpl.DistanceIMTTrellis.from_rupture_model(rupt2, gmpe_list, imts,\n",
+    "                                           filename=\"images/distance_footwall_trellis_rupt.pdf\", filetype=\"pdf\")"
    ]
   },
   {
